--- a/.env.default
+++ b/.env.default
@@ -1,3 +1,7 @@
 MONGO_USER=root
 MONGO_PASSWORD=example
 MONGO_URL=mongodb://root:example@mongo:27017/
+
+# to get a viable secret run:
+# openssl rand -hex 32
+API_SECRET_KEY="SECRET_REPLACE_ME"
