--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,13 +16,34 @@ services:
     volumes:
       - ./data/mongo_db:/data/db
 
-  # mongo management util
-  mongo-express:
-    image: mongo-express
+  # auth
+  auth:
+    build: ./services/auth-service
     restart: always
-    ports:
-      - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: "${MONGO_USER}"
-      ME_CONFIG_MONGODB_ADMINPASSWORD: "${MONGO_PASSWORD}"
-      ME_CONFIG_MONGODB_URL: "${MONGO_URL}"
+      API_ROOT_PATH: "/api/v1/auth"
+      API_HTTP_PORT: "8080"
+      API_DB_URL: "${MONGO_URL}"
+      API_DB_NAME: "auth_service"
+      API_SECRET_KEY: "${API_SECRET_KEY}"
+      API_TOKEN_EXPIRE_MIN: "60"
+  
+  # auth
+  todo-example:
+    build: ./services/todo-example-microservice
+    restart: always
+    environment:
+      API_ROOT_PATH: "/api/v1/todo"
+      API_HTTP_PORT: "8080"
+      API_DB_URL: "${MONGO_URL}"
+      API_DB_NAME: "todo_service"
+      API_SECRET_KEY: "${API_SECRET_KEY}"
+      API_LOGIN_URL: "/api/v1/auth/jwt/token"
+  
+  router:
+    build: ./router/
+    ports:
+        - "8080:80"
+    depends_on:
+        - auth
+        - todo-example
