--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,10 +23,9 @@ services:
     environment:
       API_ROOT_PATH: "/api/v1/auth"
       API_HTTP_PORT: "8080"
-      API_DB_URL: "${MONGO_URL}"
-      API_DB_NAME: "auth_service"
-      API_SECRET_KEY: "${API_SECRET_KEY}"
       API_TOKEN_EXPIRE_MIN: "60"
+    volumes:
+      - "./.env:/app/.env"
   
   # "todo" example microservice
   todo-example:
@@ -35,10 +34,9 @@ services:
     environment:
       API_ROOT_PATH: "/api/v1/todo"
       API_HTTP_PORT: "8080"
-      API_DB_URL: "${MONGO_URL}"
       API_DB_NAME: "todo_service"
-      API_SECRET_KEY: "${API_SECRET_KEY}"
-      API_LOGIN_URL: "/api/v1/auth/jwt/token"
+    volumes:
+      - "./.env:/app/.env"
   
   router:
     build: ./router/
