--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,12 @@ services:
       API_TOKEN_EXPIRE_MIN: "60"
     volumes:
       - "./.env:/app/.env"
+    healthcheck:
+      test: curl --fail http://localhost:8080/health || exit 1
+      interval: 30s
+      retries: 5
+      start_period: 20s
+      timeout: 10s
   
   # "todo" example microservice
   todo-example:
@@ -37,6 +43,12 @@ services:
       API_DB_NAME: "todo_service"
     volumes:
       - "./.env:/app/.env"
+    healthcheck:
+      test: curl --fail http://localhost:8080/health || exit 1
+      interval: 30s
+      retries: 5
+      start_period: 20s
+      timeout: 10s
   
   router:
     build: ./router/
