--- a/.env.default
+++ b/.env.default
@@ -5,3 +5,6 @@ MONGO_URL=mongodb://root:example@mongo:27017/
 # to get a viable secret run:
 # openssl rand -hex 32
 API_SECRET_KEY="SECRET_REPLACE_ME"
+
+API_DB_URL="mongodb://root:example@mongo:27017/"
+API_LOGIN_URL="/api/v1/auth/jwt/token"
