--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     environment:
       API_ROOT_PATH: "/api/v1/auth"
       API_HTTP_PORT: "8080"
+      API_DB_NAME: "auth_service"
       API_TOKEN_EXPIRE_MIN: "60"
     volumes:
       - "./.env:/app/.env"
