--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,24 @@ services:
       - 9090:9090
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+  node_exporter:
+    image: quay.io/prometheus/node-exporter:latest
+    container_name: node_exporter
+    command:
+      - '--path.rootfs=/host'
+    #network_mode: host
+    pid: host
+    restart: unless-stopped
+    volumes:
+      - '/:/host:ro,rslave'
+  grafana:
+    image: grafana/grafana-oss:8.2.6
+    ports:
+      - 3000:3000
+    volumes:
+      - ./grafana_ds.yml:/etc/grafana/provisioning/datasources/grafana_ds.yml
+      - ./data/grafana:/var/lib/grafana
+    user: "$UID:$GID"
 
   # auth
   auth:
