--- a/prometheus.yml
+++ b/prometheus.yml
@@ -18,6 +18,11 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
   
+  - job_name: 'node_exporter'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['node_exporter:9100']
+
   - job_name: 'auth'
     scrape_interval: 5s
     static_configs:
