--- a/.env.default
+++ b/.env.default
@@ -8,3 +8,4 @@ API_SECRET_KEY="SECRET_REPLACE_ME"
 
 API_DB_URL="mongodb://root:example@mongo:27017/"
 API_LOGIN_URL="/api/v1/auth/jwt/token"
+API_TRACE_URL='http://tempo:4317'
