--- a/router/nginx.conf
+++ b/router/nginx.conf
@@ -19,11 +19,11 @@ http {
     client_max_body_size 100M;
 
     upstream auth-api {
-        server auth:8080;
+        server app-auth:8080;
     }
 
     upstream todo-api {
-        server todo-example:8080;
+        server app-todo-example:8080;
     }
 
     proxy_set_header   Host $host;
