--- a/.env.default
+++ b/.env.default
@@ -12,3 +12,6 @@ API_TRACE_URL='http://tempo:4317'
 
 # common servers
 AUTH_SERVER="http://router/api/v1/auth"
+
+# maps api key
+MAPS_API_KEY="<Google maps api key>"
