--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,6 +122,24 @@ services:
       start_period: 20s
       timeout: 10s
   
+  # maps distance
+  app-maps:
+    build: ./services/maps-distance-service
+    restart: always
+    environment:
+      API_ROOT_PATH: "/api/v1/maps"
+      API_HTTP_PORT: "8080"
+      API_DB_NAME: "maps_service"
+    logging: *default-logging
+    volumes:
+      - "./.env:/app/.env"
+    healthcheck:
+      test: curl --fail http://localhost:8080/health || exit 1
+      interval: 30s
+      retries: 5
+      start_period: 20s
+      timeout: 10s
+  
   #
   # Router
   #
@@ -133,3 +151,4 @@ services:
     depends_on:
         - app-auth
         - app-todo-example
+        - app-maps
