--- a/router/nginx.conf
+++ b/router/nginx.conf
@@ -26,6 +26,10 @@ http {
         server app-todo-example:8080;
     }
 
+    upstream maps-api {
+        server app-maps:8080;
+    }
+
     proxy_set_header   Host $host;
     proxy_set_header   X-Real-IP $remote_addr;
     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -49,6 +53,11 @@ http {
 
         location  /api/v1/todo/ {
             proxy_pass   http://todo-api/;
+            proxy_redirect     off;
+        }
+
+        location  /api/v1/maps/ {
+            proxy_pass   http://maps-api/;
             proxy_redirect     off;
         }
 
