--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -140,15 +140,22 @@ services:
       start_period: 20s
       timeout: 10s
   
+  # web UI
+  web-ui:
+    build: ./services/web-ui
+    restart: always
+  
   #
   # Router
   #
   
   router:
     build: ./router/
+    restart: always
     ports:
         - "8080:80"
     depends_on:
+        - web-ui
         - app-auth
         - app-todo-example
         - app-maps
