--- a/router/nginx.conf
+++ b/router/nginx.conf
@@ -18,6 +18,10 @@ http {
 
     client_max_body_size 100M;
 
+    upstream web {
+        server web-ui:80;
+    }
+
     upstream auth-api {
         server app-auth:8080;
     }
@@ -41,10 +45,10 @@ http {
         
         server_name  localhost;
 
-        #location / {
-        #    proxy_pass   http://docker-web;
-        #    proxy_redirect     off;
-        #}
+        location / {
+            proxy_pass   http://web;
+            proxy_redirect     off;
+        }
 
         location  /api/v1/auth/ {
             proxy_pass   http://auth-api/;
