--- a/.env.default
+++ b/.env.default
@@ -12,6 +12,7 @@ API_TRACE_URL='http://tempo:4317'
 
 # common servers
 AUTH_SERVER="http://router/api/v1/auth"
+MAPS_SERVER="http://router/api/v1/maps"
 
 # maps api key
 MAPS_API_KEY="<Google maps api key>"
