--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -140,6 +140,24 @@ services:
       start_period: 20s
       timeout: 10s
   
+  # packets tracking (main service)
+  app-packets:
+    build: ./services/packets-service
+    restart: always
+    environment:
+      API_ROOT_PATH: "/api/v1/packets"
+      API_HTTP_PORT: "8080"
+      API_DB_NAME: "packets_service"
+    logging: *default-logging
+    volumes:
+      - "./.env:/app/.env"
+    healthcheck:
+      test: curl --fail http://localhost:8080/health || exit 1
+      interval: 30s
+      retries: 5
+      start_period: 20s
+      timeout: 10s
+  
   # web UI
   web-ui:
     build: ./services/web-ui
