--- a/router/nginx.conf
+++ b/router/nginx.conf
@@ -34,6 +34,10 @@ http {
         server app-maps:8080;
     }
 
+    upstream packets-api {
+        server app-packets:8080;
+    }
+
     proxy_set_header   Host $host;
     proxy_set_header   X-Real-IP $remote_addr;
     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -62,6 +66,11 @@ http {
 
         location  /api/v1/maps/ {
             proxy_pass   http://maps-api/;
+            proxy_redirect     off;
+        }
+
+        location  /api/v1/packets/ {
+            proxy_pass   http://packets-api/;
             proxy_redirect     off;
         }
 
