--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -147,7 +147,7 @@ services:
     environment:
       API_ROOT_PATH: "/api/v1/packets"
       API_HTTP_PORT: "8080"
-      API_DB_NAME: "packets_service"
+      API_DB_NAME: "packet_service"
     logging: *default-logging
     volumes:
       - "./.env:/app/.env"
